--- a/NNUI1_SemestralWork/LabyrinthFindingPath/LabyrinthFindingPath.csproj
+++ b/NNUI1_SemestralWork/LabyrinthFindingPath/LabyrinthFindingPath.csproj
@@ -47,15 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Agent.cs" />
-    <Compile Include="Position.cs" />
+    <Compile Include="Labyrinth\Agent.cs" />
+    <Compile Include="Labyrinth\Position.cs" />
     <Compile Include="Search\Action.cs" />
     <Compile Include="Search\AStarNode.cs" />
     <Compile Include="Search\AStarSearch.cs" />
-    <Compile Include="Direction.cs" />
-    <Compile Include="Labyrinth.cs" />
-    <Compile Include="LabyrinthException.cs" />
-    <Compile Include="LoaderLabyrinth.cs" />
+    <Compile Include="Labyrinth\Direction.cs" />
+    <Compile Include="Labyrinth\Labyrinth.cs" />
+    <Compile Include="Labyrinth\LabyrinthException.cs" />
+    <Compile Include="Labyrinth\LoaderLabyrinth.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -64,7 +64,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Search\SearchException.cs" />
-    <Compile Include="Search\SearchSystemController.cs" />
+    <Compile Include="Search\SearchActionProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
