--- a/NNUI1_SemestralWork/LabyrinthGUI/LabyrinthGUI.csproj
+++ b/NNUI1_SemestralWork/LabyrinthGUI/LabyrinthGUI.csproj
@@ -69,6 +69,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="FindingPath.cs" />
+    <Compile Include="GuiUtility.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -106,6 +107,9 @@
       <Project>{4BB49AE7-E91F-475D-955E-A4490CEB4468}</Project>
       <Name>LabyrinthFindingPath</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
