--- a/NNUI1_SemestralWork/LabyrinthFindingPath/LabyrinthFindingPath.csproj
+++ b/NNUI1_SemestralWork/LabyrinthFindingPath/LabyrinthFindingPath.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{4BB49AE7-E91F-475D-955E-A4490CEB4468}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>LabyrinthFindingPath</RootNamespace>
     <AssemblyName>LabyrinthFindingPath</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="PriorityQueue, Version=5.0.0.0, Culture=neutral, PublicKeyToken=5e136dbf0437dacd, processorArchitecture=MSIL">
       <HintPath>..\packages\OptimizedPriorityQueue.5.1.0\lib\net45\PriorityQueue.dll</HintPath>
@@ -49,7 +52,6 @@
   <ItemGroup>
     <Compile Include="Labyrinth\Agent.cs" />
     <Compile Include="Labyrinth\Position.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Search\Action.cs" />
     <Compile Include="Search\AStarNode.cs" />
     <Compile Include="Search\AStarSearch.cs" />
